changed: navigation is no longer visible in print view. changed: pattern is restricted to 80% page height

--- a/res/braceletedit.css
+++ b/res/braceletedit.css
@@ -12,3 +12,8 @@
 .left{text-align: right;}
 .center{text-align: center;}
 .right{text-align: left;}
+
+@media print {
+  .noprint,.actions{display:none;}
+  #pattern,#pattern svg{max-height: 85vh;}
+}
